hphp/hack/test/typecheck/tconst/disallow_access_on_nullable.php.exp
File "disallow_access_on_nullable.php", line 6, characters 18-21:
You are trying to access the member B but this is not an object, it is a nullable type (Typing[4062])
File "disallow_access_on_nullable.php", line 6, characters 24-24:
Definition is here
